--- a/evoks/theme/templates/modals/create_vocabulary.html
+++ b/evoks/theme/templates/modals/create_vocabulary.html
@@ -18,7 +18,7 @@
                         </h3>
                         <div class="mt-2">
                             <p class="text-sm text-gray-500">
-                                Enter a vocabulary name and create one from scratch or import an existing vocabulary!
+                                Enter a vocabulary name and create one from scratch or import an existing vocabulary! Importing a big vocabulary can take some time.
                             </p>
                         </div>
 
@@ -68,7 +68,7 @@
                                                             <p class="pl-1">or drag and drop</p>
                                                         </div>
                                                         <p class="text-xs text-gray-500">
-                                                            RDF/XML, TTL up to 100MB
+                                                            TTL up to 100MB
                                                         </p>
                                                     </div>
                                                 </div>
