--- a/evoks/theme/templates/header/searchbar.html
+++ b/evoks/theme/templates/header/searchbar.html
@@ -10,7 +10,7 @@
     </button>
     <div class="flex-1 flex justify-between px-4 md:px-0">
         <div class="flex-1 flex">
-            <form class="w-full flex md:ml-0" action='{% url 'vocabulary_overview' name=vocabulary.name %}'
+            <form class="w-full flex md:ml-0" action='{% url 'vocabulary_overview' voc_name=vocabulary.name %}'
                 method="GET">
                 <label for="search-field" class="sr-only">Search</label>
                 <div class="relative w-full text-gray-400 focus-within:text-gray-600">
@@ -60,7 +60,7 @@
                         id="user-menu-button" aria-expanded="false" aria-haspopup="true">
                         <span class="sr-only">Open user menu</span>
                         <img class="h-8 w-8 rounded-full"
-                            src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Plato_Silanion_Musei_Capitolini_MC1377.jpg/440px-Plato_Silanion_Musei_Capitolini_MC1377.jpg"
                             alt="">
 
                     </button>
