--- a/evoks/theme/templates/modals/create_term.html
+++ b/evoks/theme/templates/modals/create_term.html
@@ -18,7 +18,7 @@
                         </h3>
                         <div class="mt-2">
                             <p class="text-sm text-gray-500">
-                                Enter a term name and create one from scratch or import an existing term!
+                                Enter a term name and create one from scratch!
                             </p>
                         </div>
 
@@ -27,7 +27,8 @@
                                 <div>
                                     <div class="mt-6 sm:mt-5 space-y-6 sm:space-y-5">
                                         <div>
-                                            <label for="term-name" class="block text-sm font-medium text-gray-700">Name</label>
+                                            <label for="term-name"
+                                                class="block text-sm font-medium text-gray-700">Name</label>
                                             <div class="mt-1">
                                                 <input type="text" name="term-name" id="text"
                                                     class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
@@ -35,36 +36,6 @@
                                             </div>
                                         </div>
 
-                                        <div>
-                                            <label for="vocabulary"
-                                                class="block text-sm font-medium text-gray-700">Term</label>
-                                            <div class="mt-1">
-                                                <div
-                                                    class="max-w-lg flex justify-center px-6 pt-5 pb-6 border-2 border-gray-300 border-dashed rounded-md">
-                                                    <div class="space-y-1 text-center">
-                                                        <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor"
-                                                            fill="none" viewBox="0 0 48 48" aria-hidden="true">
-                                                            <path
-                                                                d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12 4h.02"
-                                                                stroke-width="2" stroke-linecap="round"
-                                                                stroke-linejoin="round" />
-                                                        </svg>
-                                                        <div class="flex text-sm text-gray-600">
-                                                            <label for="file-upload"
-                                                                class="relative cursor-pointer bg-white rounded-md font-medium text-regal-blue hover:text-regal-blue focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500">
-                                                                <span>Upload a file</span>
-                                                                <input id="file-upload" name="term-import" type="file"
-                                                                    class="sr-only">
-                                                            </label>
-                                                            <p class="pl-1">or drag and drop</p>
-                                                        </div>
-                                                        <p class="text-xs text-gray-500">
-                                                            RDF/XML, TTL up to 100MB
-                                                        </p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -79,11 +50,11 @@
                             Cancel
                         </button>
                     </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
+</form>
+</div>
+</div>
+</div>
+</div>
 </form>
 <script type="text/javascript">
     document.getElementById("create-term-modal-cancel").addEventListener("click", function (e) {
