--- a/evoks/theme/templates/term_detail.html
+++ b/evoks/theme/templates/term_detail.html
@@ -203,6 +203,18 @@
                                         </span>
                                     </dd>
                                 </div>
+                                    <dd class="mt-1 flex text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                                        <span class="flex-grow">
+
+                                        </span>
+                                        <span class="ml-4 flex-shrink-0">
+
+                                            <button id="delete-term-button"
+                                                class="inline-flex items-center px-3 py-2 font-medium rounded px-4 py-2 leading-5 bg-red-500 text-primary-100 text-white hover:text-white focus:ring-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2">
+                                                Delete Term
+                                            </button>
+                                        </span>
+                                    </dd>
                                 </dl>
                             </div>
                             <!-- Tags Thing-->
